fixed side bar padding

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@
   color: #f3f3f2;
   margin-bottom: 0;
   padding-bottom: 0;
+  padding-top: .2vh;
   margin-top: 10;
   padding-left: .1vw;
 }
@@ -105,6 +106,7 @@
   color: #f3f3f2;
   margin-bottom: 0;
   padding-bottom: 0;
+  padding-top: .3vh;
   margin-top: 10;
   padding-left: .1vw;
 }
